--- a/src/app/pentagonal-trapezohedron/pentagonal-trapezohedron.component.scss
+++ b/src/app/pentagonal-trapezohedron/pentagonal-trapezohedron.component.scss
@@ -1,8 +1,8 @@
 @use 'sass:math';
 @import "../../stylings/vars.scss";
 
-$color_dice: $secondary-color;
-$color_dice_dark: $secondary-dark-color;
+$color_dice: $sec-color;
+$color_dice_dark: $sec-color-dark;
 $widthSides: 6;
 $heightSides: 6;
 $unitWidthSides: 1em * $widthSides;
@@ -18,24 +18,6 @@ $isoscelesSide: math.sqrt(math.pow(($widthSides / 2), 2) + math.pow($apothemPent
 $diffDeflectionVertexToBase: $isoscelesSide - $apothemPentagon;
 $distance-top-from-bottom-triangles: math.tan($angleDeflection) * $diffDeflectionVertexToBase;
 $heightConnectingCubes: ($diffDeflectionVertexToBase / math.cos($angleDeflection)) * 1.0em;
-
-@keyframes rotation {
-   0% {
-      transform: rotateX(90deg) rotateY(0deg) rotateZ(0deg);
-   }
-   25%{
-      transform: rotateX(60deg) rotateY(0deg) rotateZ(90deg);
-   }
-   50% {
-      transform: rotateX(90deg) rotateY(0deg) rotateZ(180deg);
-   }
-   75% {
-      transform: rotateX(120deg) rotateY(0deg) rotateZ(270deg);
-   }
-   100% {
-      transform: rotateX(90deg) rotateY(0deg) rotateZ(360deg);
-   }
-}
 
 .top1{ 
    transform: translate3d(0px, 0px, $heightDeflectionTriangles * -1em) rotateZ(0deg) rotateX($angleDeflection);
@@ -78,8 +60,8 @@ $heightConnectingCubes: ($diffDeflectionVertexToBase / math.cos($angleDeflection
    border-bottom: $unitWidthSides solid $color_dice;
 }
 .obj3d{
-   width: 100%;
-   height:100%;
+   width: $size-dice;
+   height: $size-dice;
    perspective: 800px;
 }
 
@@ -90,10 +72,6 @@ $heightConnectingCubes: ($diffDeflectionVertexToBase / math.cos($angleDeflection
    transform-style: preserve-3d;
    transform-origin: center;
    transform: rotateX(90deg) rotateZ(0deg);
-    &:hover {
-      animation: rotation 8s linear infinite;
-      animation-direction: initial;
-    }
 }
 
 .deltoid {
